--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,7 +5,12 @@
     <string name="drawer_open">Aberto</string>
     <string name="drawer_closed">Fechado</string>
     <string name="last">Últ</string>
+    <string name="uuid">UUID</string>
     <string name="expression">Expressão</string>
     <string name="result">Resultado</string>
     <string name="registered_at">Registado em:</string>
+    <string name="registry_saved">Registo guardado</string>
+    <string name="no_history_available">Sem histórico disponível</string>
+    <string name="deleting">A eliminar…</string>
+    <string name="operation_deleted">Operação %1$s eliminada</string>
 </resources>
