--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,5 @@
     <string name="registry_saved">Registo guardado</string>
     <string name="no_history_available">Sem histórico disponível</string>
     <string name="deleting">A eliminar…</string>
+    <string name="map">Mapa</string>
 </resources>
