--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,6 @@
 <resources>
     <string name="app_name">Fichas</string>
     <string name="calculator">Calculadora</string>
-    <string name="photo_booth">Cabine de Fotos</string>
     <string name="history">Histórico</string>
     <string name="drawer_open">Aberto</string>
     <string name="drawer_closed">Fechado</string>
@@ -14,6 +13,7 @@
     <string name="no_history_available">Sem histórico disponível</string>
     <string name="deleting">A eliminar…</string>
     <string name="map">Mapa</string>
+    <string name="photobooth">Cabine de Fotos</string>
     <string name="click_over_photo">Clique numa fotografia para ampliar</string>
     <string name="no_camera_permission">Sem permissão, não há fotozinha!</string>
     <string name="photo_saved">Fotografia guardada!</string>
